--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
         </activity>
 
         <activity
+            android:name=".ui.register.RegisterActivity"
+            android:launchMode="singleTop" />
+
+        <activity
             android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop" />
 
